kustomize-units/network-policies/components/sbom-operator/deny-all-ingress.yaml
---
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: deny-all-ingress
  namespace: sbom-operator
spec:
  selector: all()
  types:
    - Ingress
